add a bunch of other endpoint functions