@@ -6,10 +6,12 @@ import software.amazon.awssdk.services.dynamodb.model.AttributeValue;
 import software.amazon.awssdk.services.dynamodb.model.PutItemRequest;
 import software.amazon.awssdk.services.dynamodb.model.QueryRequest;
 import software.amazon.awssdk.services.dynamodb.model.QueryResponse;
+import software.amazon.awssdk.services.dynamodb.model.ScanRequest;
+import software.amazon.awssdk.services.dynamodb.model.ScanResponse;
 
 import java.util.List;
 import java.util.Map;
-import java.util.UUID;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Repository;
 
@@ -22,12 +24,14 @@ public class RoomRepository {
     this.dynamoDbClient = dynamoDbClient;
   }
 
+  // add room
   public Room addRoom(Room room) {
     Map<String, AttributeValue> item = Map.of(
         "locationId", AttributeValue.builder().s(room.getLocationId()).build(),
         "roomId", AttributeValue.builder().s(room.getRoomId()).build(),
         "roomName", AttributeValue.builder().s(room.getRoomName()).build(),
-        "capacity", AttributeValue.builder().s(room.getCapacity()).build(),
+        "capacity", AttributeValue.builder().n(room.getCapacity().toString()).build(),
+        "basePrice", AttributeValue.builder().n(room.getBasePrice().toString()).build(),
         "createdAt", AttributeValue.builder().s(room.getCreatedAt()).build(),
         "updatedAt", AttributeValue.builder().s(room.getUpdatedAt()).build());
 
@@ -40,9 +44,27 @@ public class RoomRepository {
     return room;
   }
 
+  public Room getRoomById(String roomId) {
+    // TODO: change scan because its inefficient for one item lookup
+    ScanRequest scanRequest = ScanRequest.builder()
+        .tableName(tableName)
+        .filterExpression("roomId = :rid")
+        .expressionAttributeValues(Map.of(
+            ":rid", AttributeValue.builder().s(roomId).build()))
+        .build();
+
+    ScanResponse response = dynamoDbClient.scan(scanRequest);
+
+    return response.items().stream()
+        .map(this::mapToRoom)
+        .findFirst()
+        .orElse(null);
+  }
+
+  // get all rooms by locationid
   public List<Room> getRoomsByLocationId(String locationId) {
     QueryRequest queryRequest = QueryRequest.builder()
-        .tableName("Rooms")
+        .tableName(tableName)
         .keyConditionExpression("locationId = :v_id")
         .expressionAttributeValues(Map.of(
             ":v_id", AttributeValue.builder().s(locationId).build()))
@@ -50,15 +72,47 @@ public class RoomRepository {
 
     QueryResponse response = dynamoDbClient.query(queryRequest);
 
-    return response.items().stream().map(item -> {
-      Room room = new Room();
-      room.setLocationId(item.get("locationId").s());
-      room.setRoomId(item.get("roomId").s());
-      room.setRoomName(item.get("roomName").s());
-      room.setCapacity(item.get("capacity").s());
-      room.setCreatedAt(item.get("createdAt").s());
-      room.setUpdatedAt(item.get("updatedAt").s());
-      return room;
-    }).toList();
+    return response.items().stream()
+        .map(this::mapToRoom)
+        .collect(Collectors.toList());
+  }
+
+  // get every room in the tbale
+  public List<Room> getAllRooms() {
+    ScanRequest scanRequest = ScanRequest.builder()
+        .tableName(tableName)
+        .build();
+
+    ScanResponse response = dynamoDbClient.scan(scanRequest);
+
+    return response.items().stream()
+        .map(this::mapToRoom)
+        .collect(Collectors.toList());
+  }
+
+  private Room mapToRoom(Map<String, AttributeValue> item) {
+    if (item == null || item.isEmpty())
+      return null;
+
+    Room room = new Room();
+
+    room.setLocationId(item.containsKey("locationId") ? item.get("locationId").s() : "");
+    room.setRoomId(item.containsKey("roomId") ? item.get("roomId").s() : "");
+    room.setRoomName(item.containsKey("roomName") ? item.get("roomName").s() : "Unknown");
+
+    String capacityVal = (item.containsKey("capacity") && item.get("capacity").n() != null)
+        ? item.get("capacity").n()
+        : "0";
+    room.setCapacity(Integer.parseInt(capacityVal));
+
+    String priceVal = (item.containsKey("basePrice") && item.get("basePrice").n() != null)
+        ? item.get("basePrice").n()
+        : "0.0";
+    room.setBasePrice(Float.parseFloat(priceVal));
+
+    room.setCreatedAt(item.containsKey("createdAt") ? item.get("createdAt").s() : "");
+    room.setUpdatedAt(item.containsKey("updatedAt") ? item.get("updatedAt").s() : "");
+
+    return room;
   }
 }
